--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
   <script src="https://js.stripe.com/v3/"></script>
 
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -31,29 +31,32 @@
 
 <body>
   <video muted="muted" loop="loop" autoplay="autoplay" src="/images/magazine.mp4" id="vid"></video>
-  <header id="header">
-    <h1><a href="/">Papyr</a></h1>
-    <div class="search-form">
-      <div class="input-group input-group-lg">
-        <input type="text" class="form-control" v-model="query" placeholder="search" v-on:keyup.enter="search">
-        <span class="input-group-btn">
-          <button class="btn btn-default" type="button" v-on:click="search">Go!</button>
-        </span>
-      </div>
-      <!-- /input-group -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">Papyr</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/all"> <i class="fa fa-book" aria-hidden="true"></i> All Books</a>
+        </li>
+       
+        <li class="nav-item">
+          <a class="nav-link" href="/checkout"> <i class="fa fa-shopping-cart" aria-hidden="true"></i> Checkout</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/login"><i class="fa fa-user-circle-o" aria-hidden="true"></i> Sign In</a>
+        </li>
+      </ul>
+      <form class="form-inline my-4 my-lg-0">
+        <input class="form-control mr-sm-4" type="text" v-model="query" placeholder="Search" aria-label="Search" v-on:keyup.enter="search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="button" v-on:click="search">Go!</button>
+      </form>
     </div>
-    <nav>
-      <a href="/all">
-                <i class="fa fa-book" aria-hidden="true"></i>
-            </a>
-      <a href="/login">
-        <i class="fa fa-user-circle-o" aria-hidden="true"></i>
-      </a>
-      <a href="/checkout">
-        <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-      </a>
-    </nav>
-  </header>
+  </nav>
+  
+  
   <div class="container">
     <div id="app" class="main" role="main">
       <component v-bind:is="currentView">
